force-app/main/default/objects/Question_Generation_Job__c/Question_Generation_Job__c.object-meta.xml
<CustomObject>
    <description>Async LLM-driven question generation job.</description>
    <label>Question Generation Job</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Question Generation Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Generation Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>