force-app/main/default/objects/Question_Generation_Job__c/fields/Certification_Exam__c.field-meta.xml
<CustomField>
    <fullName>Certification_Exam__c</fullName>
    <label>Certification Exam</label>
    <type>Lookup</type>
    <required>true</required>
    <referenceTo>Certification_Exam__c</referenceTo>
    <relationshipName>Generation_Jobs</relationshipName>
    <relationshipLabel>Certification Exam</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>