force-app/main/default/objects/Question_Generation_Job__c/fields/Difficulty_Focus__c.field-meta.xml
<CustomField>
    <fullName>Difficulty_Focus__c</fullName>
    <description
    >Difficulty bias for the generation request; passed to the provider prompt and recorded for analytics.</description>
    <label>Difficulty Focus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mixed</fullName>
                <default>true</default>
                <label>Mixed</label>
            </value>
            <value>
                <fullName>Beginner</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>