force-app/main/default/objects/Question_Generation_Job__c/fields/Domain_Focus__c.field-meta.xml
<CustomField>
    <fullName>Domain_Focus__c</fullName>
    <description
    >Comma-separated list of Exam_Domain names the requester asked the generator to bias toward.</description>
    <label>Domain Focus</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>