force-app/main/default/objects/Question_Generation_Job__c/fields/Generated_Question_Count__c.field-meta.xml
<CustomField>
    <fullName>Generated_Question_Count__c</fullName>
    <label>Generated Question Count</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>