force-app/main/default/objects/Question_Generation_Job__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Text</type>
    <length>80</length>
    <length>80</length>
</CustomField>