force-app/main/default/objects/Question_Generation_Job__c/fields/Output_JSON__c.field-meta.xml
<CustomField>
    <fullName>Output_JSON__c</fullName>
    <label>Output JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>