force-app/main/default/objects/Question_Generation_Job__c/fields/Prompt_Text__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Text__c</fullName>
    <label>Prompt Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>