force-app/main/default/objects/Question_Generation_Job__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <label>Requested By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Generation_Jobs_Requested</relationshipName>
    <relationshipLabel>Requested By</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>