force-app/main/default/objects/Question_Generation_Job__c/fields/Requested_Question_Count__c.field-meta.xml
<CustomField>
    <fullName>Requested_Question_Count__c</fullName>
    <label>Requested Question Count</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>