force-app/main/default/objects/Question_Generation_Job__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenant</label>
    <referenceTo>Tenant__c</referenceTo>
    <relationshipLabel>Tenant</relationshipLabel>
    <relationshipName>Generation_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>