force-app/main/default/objects/Question_Generation_Job__c/fields/Token_Cost_USD__c.field-meta.xml
<CustomField>
    <fullName>Token_Cost_USD__c</fullName>
    <label>Token Cost USD</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>